src/objects/Blog_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Blog_Post__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Blog Post</label>
        <referenceTo>Blog_Post__c</referenceTo>
        <relationshipLabel>Blog Comments</relationshipLabel>
        <relationshipName>Blog_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posted__c</fullName>
        <label>Posted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Replying_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replying To</label>
        <referenceTo>Blog_Comment__c</referenceTo>
        <relationshipLabel>Blog Comments</relationshipLabel>
        <relationshipName>Blog_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Blog Comment</label>
    <nameField>
        <displayFormat>BC-{0000}</displayFormat>
        <label>Blog Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blog Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>